# CsvTableHandler

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: main.cpp
src/CsvTable/: CsvTable.cpp  CsvTable.h
src/CsvTableCalculator/: CsvTableCalculator.cpp  CsvTableCalculator.h
tests/: CMakeLists.txt  UnitTests.cpp
tests/files/: test_2.csv  test_3.csv  test_4_error_table.csv  test_5_error_column_and_row_index.csv
